--- a/sass/modules/article.sass
+++ b/sass/modules/article.sass
@@ -19,6 +19,10 @@
 .article-title
   color: $firm
 
+.article-label
+  color: $bright
+  padding-right: $space-m
+
 @media all and (max-width: 499px)
   .article
     padding-left: 0
