--- a/sass/modules/debug-grid.sass
+++ b/sass/modules/debug-grid.sass
@@ -15,3 +15,9 @@
   .last-col
     .inner-col
       margin-right: 0
+
+@media all and (max-width: 499px)
+  .debug-grids
+    .inner-col
+      margin-right: 0
+
