--- a/sass/scaffy/mixins.sass
+++ b/sass/scaffy/mixins.sass
@@ -80,6 +80,7 @@
 // Grids
 // ==============================================
 =clearfix
+  *zoom: 1
   &:after
     content: '.'
     display: block
@@ -91,6 +92,11 @@
   display: table-cell
   float: none
   width: auto
+  _margin-right: -3px
+  _left: -3px
+  _position: relative
+  *display: block
+  *zoom: 1
   &:after
     content: ' . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . '
     clear: both
