Stylesheets structure refactoring

--- a/sass/application.sass
+++ b/sass/application.sass
@@ -1,6 +1,4 @@
-@import 'scaffy/bundle'
-@import 'layouts/application'
-@import 'library/library'
-@import 'modules/debug-grid'
-@import 'modules/article'
-@import 'modules/sidebar'
+@import 'layouts/_application'
+@import 'modules/_debug-grid'
+@import 'modules/_article'
+@import 'modules/_sidebar'
