--- a/haml/js-problems.haml
+++ b/haml/js-problems.haml
@@ -30,7 +30,7 @@
       Code is never predictable to find by looking just at the
       selector. So much frustration.
 
-    %h2.positive
+    %h2.bright
       And we decided to start with
       %a(href="http://oocss.org" target="_blank") OOCSS
       methodology as a base for creating approach that meets our
