--- a/haml/js-sidebar.haml
+++ b/haml/js-sidebar.haml
@@ -29,5 +29,7 @@
       %li
         %a(href="#p12") File structure
       %li
-        %a(href="#p13") Grids
+        %a(href="#p13") Responsive design
+      %li
+        %a(href="#p14") Grids
 
