--- a/sass/application.sass
+++ b/sass/application.sass
@@ -1,4 +1,5 @@
-@import 'layouts/_application'
-@import 'modules/_debug-grid'
-@import 'modules/_article'
-@import 'modules/_sidebar'
+@import 'layouts/application'
+@import 'modules/debug-grid'
+@import 'modules/article'
+@import 'modules/sidebar'
+@import 'modules/responsivity'
