--- a/sass/scaffy/_responsive.sass
+++ b/sass/scaffy/_responsive.sass
@@ -9,33 +9,33 @@
 // For mobile
 @media all and (max-width: 499px)
   .shown-mobile
-    display: block
+    display: inherit
 
   .hidden-tablet
-    display: block
+    display: inherit
 
   .hidden-desktop
-    display: block
+    display: inherit
 
 // For tablet
 @media all and (min-width: 500px) and (max-width: 781px)
   .shown-tablet
-    display: block
+    display: inherit
 
   .hidden-mobile
-    display: block
+    display: inherit
 
   .hidden-desktop
-    display: block
+    display: inherit
 
 // For desktop
 @media all and (min-width: 781px)
   .shown-desktop
-    display: block
+    display: inherit
 
   .hidden-mobile
-    display: block
+    display: inherit
 
   .hidden-tablet
-    display: block
+    display: inherit
 
