--- a/sass/scaffy/_responsive.sass
+++ b/sass/scaffy/_responsive.sass
@@ -8,34 +8,22 @@
 
 // For mobile
 @media all and (max-width: 499px)
-  .shown-mobile
-    display: inherit
-
-  .hidden-tablet
-    display: inherit
-
+  .shown-mobile,
+  .hidden-tablet,
   .hidden-desktop
     display: inherit
 
 // For tablet
 @media all and (min-width: 500px) and (max-width: 781px)
-  .shown-tablet
-    display: inherit
-
-  .hidden-mobile
-    display: inherit
-
+  .shown-tablet,
+  .hidden-mobile,
   .hidden-desktop
     display: inherit
 
 // For desktop
 @media all and (min-width: 781px)
-  .shown-desktop
-    display: inherit
-
-  .hidden-mobile
-    display: inherit
-
+  .shown-desktop,
+  .hidden-mobile,
   .hidden-tablet
     display: inherit
 
